# python-package-exercise-project-3-team-16

./: README.md  pyproject.toml  requirements.txt
fortune-teller/: pyproject.toml
fortune-teller/src/fortunetelleracs1029/: __main__.py  wisdom.py
fortune-teller/tests/: test_wisdom.py
src/fortunetelleracs1029/: __main__.py  fortuneteller.py  wisdom.py
tests/: test_fortuneteller.py  test_wisdom.py
