[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortunetelleracs1029"
description = "A fortune teller package, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.0.8"
authors = [
  { name="Andrei Stoica", email="andreicstoica@icloud.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "fortune", "teller", "fortune-teller"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-16"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-16.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-16/issues"

[project.scripts]
wisdom = "wisdom.__main__:main"
